Minor IO and ont hierarchy tweaks